<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calificacion"
            android:icon="@drawable/calificacion"
            android:title="@string/menu_calificacion" />
        <item
            android:id="@+id/nav_observacion"
            android:icon="@drawable/observacion"
            android:title="@string/menu_observacion" />

<!-- !important agregar los fragments
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
-->
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/salir2"
            android:title="@string/menu_salir" />
    </group>
</menu>