<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chang.sistemalecto_escritura.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calificacion"
        android:name="com.chang.sistemalecto_escritura.ui.calificaciones.CalificacionFragment"
        android:label="@string/menu_calificacion"
        tools:layout="@layout/fragment_calificacion" />

    <fragment
        android:id="@+id/nav_observacion"
        android:name="com.chang.sistemalecto_escritura.ui.observaciones.ObservacionFragment"
        android:label="@string/menu_observacion"
        tools:layout="@layout/fragment_observacion" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.chang.sistemalecto_escritura.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />
</navigation>