<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recovery">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_fondo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/opaco"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/logo_default"
            android:layout_height="@dimen/logo_default"
            android:layout_marginBottom="@dimen/marging_default"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc_logo"/>

        <TextView
            android:id="@+id/textViewSubtitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_default"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r_correo"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:background="@drawable/input"
            android:paddingHorizontal="@dimen/padding_default"
            android:paddingVertical="@dimen/padding_vertical"
            android:maxLength="30"
            android:textColorHint="@color/gris_claro"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_msg"
            android:textSize="@dimen/default_text_size"
            android:layout_marginBottom="@dimen/marging_xlarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ir_recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:layout_marginBottom="@dimen/marging_default"
            android:background="@drawable/btn_fondo_color"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            app:backgroundTint="@color/primary" />



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_account"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/btn_ini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marging_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>