<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/background"
        android:contentDescription="@string/desc_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/opaco"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/desc_logo"
            android:layout_width="@dimen/logo_default"
            android:layout_height="@dimen/logo_default"
            android:src="@drawable/logo"
            android:layout_marginBottom="20sp" />

        <TextView
            android:id="@+id/textViewSubtitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_default"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_correo"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/marging_vertical"
            android:textColor="@color/white"
            android:maxLength="30"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:background="@drawable/input"
            android:paddingHorizontal="@dimen/padding_default"
            android:paddingVertical="@dimen/padding_vertical"
            android:textColorHint="@color/gris_claro"
            tools:ignore="Autofill" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_contrasena"
            android:hint="@string/contra"
            android:maxLength="15"
            android:layout_marginBottom="@dimen/marging_vertical"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:background="@drawable/input"
            android:paddingHorizontal="@dimen/padding_default"
            android:paddingVertical="@dimen/padding_vertical"
            android:textColorHint="@color/gris_claro"
            android:textColor="@color/white"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <Button
                android:id="@+id/r_olvidar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marging_default"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:text="@string/ask_pass"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <Button
            android:id="@+id/ir_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/btn_fondo_color"
            android:backgroundTint="@color/primary"
            android:elevation="5sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            app:backgroundTint="@color/primary" />

        <!-- DEBUG. -->
        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/skip"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>