<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"
        android:contentDescription="@string/desc_fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/opaco"
        android:orientation="vertical"

        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/logo_default"
            android:layout_height="@dimen/logo_default"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marging_default"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/marging_default"
            android:text="@string/msg_bienvenido"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>