<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"
        android:contentDescription="@string/desc_fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logo"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/logo_splash"
            android:layout_height="@dimen/logo_splash"
            android:layout_marginBottom="@dimen/marging_default"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc_logo" />
        <TextView
            android:id="@+id/textViewSubtitleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marging_default"
            android:text="@string/msg_blank"
            android:textColor="@color/primary"
            android:shadowColor="@color/white"
            android:shadowRadius="50"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
<!--
        <TextView
            android:id="@+id/textViewSubtitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_default"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:shadowColor="@color/black"
            android:shadowRadius="50"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>